tools/slurm_files/slurm-train-nn-gpu-21210559.err
Traceback (most recent call last):
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/runpy.py", line 185, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/runpy.py", line 111, in _get_module_details
    __import__(pkg_name)
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/site-packages/torch/__init__.py", line 1478, in <module>
    _C._initExtension(manager_path())
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/site-packages/torch/cuda/__init__.py", line 56, in <module>
    import pynvml  # type: ignore[import]
  File "/cm/local/apps/cuda/libs/current/pynvml/pynvml.py", line 1671
    print c_count.value
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(c_count.value)?
Traceback (most recent call last):
  File "train.py", line 7, in <module>
    from test import repeat_eval_ckpt
  File "/home/uni08/hpc/sun.qumeng/u11423/OpenPCDet/tools/test.py", line 11, in <module>
    import torch
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/site-packages/torch/__init__.py", line 1478, in <module>
    _C._initExtension(manager_path())
  File "/user/sun.qumeng/u11423/.conda/envs/openpcd/lib/python3.8/site-packages/torch/cuda/__init__.py", line 56, in <module>
    import pynvml  # type: ignore[import]
  File "/cm/local/apps/cuda/libs/current/pynvml/pynvml.py", line 1671
    print c_count.value
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(c_count.value)?
